[gd_scene load_steps=21 format=3 uid="uid://djbcofb3nw6fs"]

[ext_resource type="Script" path="res://scenes/opening.gd" id="1_054iu"]
[ext_resource type="Theme" uid="uid://dqi0hk3a3o51b" path="res://res/bird_theme.tres" id="1_gi4hl"]
[ext_resource type="VideoStream" path="res://assets/movie/shoigopening.ogv" id="1_hrjeu"]
[ext_resource type="VideoStream" path="res://assets/movie/shoigu talk loop.ogv" id="3_pbps2"]
[ext_resource type="Texture2D" uid="uid://rnetscfhbqdl" path="res://assets/tex/loopref.png" id="6_qmqjh"]
[ext_resource type="PackedScene" uid="uid://efrynet2vbbx" path="res://scenes/bird_intro.tscn" id="6_r0152"]
[ext_resource type="AudioStream" uid="uid://c3rx16dkfnf8v" path="res://assets/audio/music/Shooting Stars loop.ogg" id="7_hncdu"]
[ext_resource type="AudioStream" uid="uid://d2d84ut25f6ql" path="res://assets/audio/music/Shooting Stars intro.ogg" id="8_nu6su"]
[ext_resource type="AudioStream" uid="uid://bmaw4ewqjsy8y" path="res://assets/audio/music/Shooting Stars main.ogg" id="9_1dmb4"]
[ext_resource type="AudioStream" uid="uid://wstqyl1p2ufx" path="res://assets/audio/click4.ogg" id="10_l1rpx"]

[sub_resource type="Animation" id="Animation_v5sij"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VideoTalkLoop:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_l6a6h"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VideoTalkLoop:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jsg2i"]
_data = {
"RESET": SubResource("Animation_v5sij"),
"fade_out": SubResource("Animation_l6a6h")
}

[sub_resource type="Animation" id="Animation_tval0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BirdIntro:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BirdIntro:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BirdIntro:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(759, 549)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("VideoStreamPlayer:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("VideoTalkLoop:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ic4m4"]
resource_name = "start"
length = 8.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BirdIntro:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BirdIntro:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BirdIntro:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1, 1.5, 3, 3.5, 6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(759, 549), Vector2(781, 565), Vector2(933, 468), Vector2(1001, 536), Vector2(1761, -476)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("VideoStreamPlayer:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("VideoTalkLoop:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m67fi"]
_data = {
"RESET": SubResource("Animation_tval0"),
"start": SubResource("Animation_ic4m4")
}

[sub_resource type="Animation" id="Animation_wnrfv"]
resource_name = "start"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Ui/LabelClick:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.909804, 0.807843, 0.027451, 1), Color(0.909804, 0.027451, 0.027451, 1), Color(0.909804, 0.807843, 0.027451, 1)]
}

[sub_resource type="Animation" id="Animation_cdoe5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Ui/LabelClick:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.909804, 0.807843, 0.027451, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Ui/LabelClick:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioClick:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Ui/MarginContainer:theme_override_constants/margin_bottom")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1600]
}

[sub_resource type="Animation" id="Animation_ka1ww"]
resource_name = "clicked"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Ui/LabelClick:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 1.5), Vector2(0.8, 0.8), Vector2(0.9, 0.9), Vector2(1e-05, 1e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioClick:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Ui/MarginContainer:theme_override_constants/margin_bottom")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 10),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1600, 600]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_amhoh"]
_data = {
"RESET": SubResource("Animation_cdoe5"),
"clicked": SubResource("Animation_ka1ww"),
"start": SubResource("Animation_wnrfv")
}

[node name="Opening" type="CanvasLayer"]
script = ExtResource("1_054iu")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="refbg" type="TextureRect" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -360.0
offset_right = 640.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_qmqjh")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -360.0
offset_right = 640.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
stream = ExtResource("1_hrjeu")

[node name="VideoTalkLoop" type="VideoStreamPlayer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -360.0
offset_right = 640.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
stream = ExtResource("3_pbps2")
autoplay = true

[node name="BirdIntro" parent="." instance=ExtResource("6_r0152")]
position = Vector2(759, 549)

[node name="Ui" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_gi4hl")

[node name="MarginContainer" type="MarginContainer" parent="Ui"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -215.0
offset_top = -45.5
offset_right = 215.0
offset_bottom = 45.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_bottom = 1600

[node name="LabelTitle" type="Label" parent="Ui/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Flappy Shoigu"

[node name="LabelClick" type="Label" parent="Ui"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -195.5
offset_top = 180.0
offset_right = 195.5
offset_bottom = 271.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(190, 45)
theme_override_colors/font_color = Color(0.909804, 0.807843, 0.027451, 1)
text = "Click to play!"
horizontal_alignment = 1

[node name="Anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jsg2i")
}

[node name="AudioMusicLoop" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_hncdu")
volume_db = -12.0
autoplay = true
bus = &"Music"

[node name="AudioMusicIntro" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_nu6su")

[node name="AudioMusicMain" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_1dmb4")

[node name="AnimShoigu" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_m67fi")
}

[node name="AnimClick" type="AnimationPlayer" parent="."]
autoplay = "start"
libraries = {
"": SubResource("AnimationLibrary_amhoh")
}

[node name="AudioClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_l1rpx")
